--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <lottie-player autoplay background="transparent" class="astronaut" loop />
   </main>
   <footer class="footer">
-    <p class="text">maybe one day I'll care enough to do a portfolio...</p>
+    <p class="text">maybe one day I'll care enough to create a portfolio...</p>
     <section class="links">
       <a href="https://www.linkedin.com/in/guillermo-alvarez-64300a1a9/" target="_blank">
         <?xml version="1.0"?><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30px" height="30px"
